implemented initial markup for the heding part of the page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tomasz Zajac - Portfolio Website</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <p>Hi, my name is</p>
+    <h2><span>Tomasz Zajac.</span>I develop beautiful web experiences.</h2>
+
+    <p>
+      I am a budding software engineer, with a strong focus on front-end
+      technologies such as React, NextJS, JavaScript, and CSS/Tailwind.
+    </p>
+
+    <p>Currently, I'm transitioning from e-commerce to tech.</p>
+
+    <p>
+      Discover some of my work below or visit my
+      <a href="https://github.com/TomaszSarmata" target="_blank"
+        >Github account</a
+      >
+      .
+    </p>
+  </body>
 </html>
