added section element and changed the layout of the markup a llittle

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <p>Hi, my name is</p>
-    <h2><span>Tomasz Zajac.</span>I develop beautiful web experiences.</h2>
+    <section id="intro">
+      <p>Hi, my name is <span>Tomasz Zajac.</span></p>
+      <h2>I develop beautiful web experiences.</h2>
 
-    <p>
-      I am a budding software engineer, with a strong focus on front-end
-      technologies such as React, NextJS, JavaScript, and CSS/Tailwind.
-    </p>
+      <p>
+        I am a budding software engineer, with a strong focus on front-end
+        technologies such as React, NextJS, JavaScript, and CSS/Tailwind.
+      </p>
 
-    <p>Currently, I'm transitioning from e-commerce to tech.</p>
+      <p>Currently, I'm transitioning from e-commerce to tech.</p>
+    </section>
   </body>
 </html>
