added some extra styling to the intro section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <section id="intro">
-      <p>Hi, my name is <span>Tomasz Zajac.</span></p>
+      <p class="name">Hi, my name is <span>Tomasz Zajac.</span></p>
       <h2>I develop beautiful web experiences.</h2>
 
       <p>
