added markup fo the contact section

--- a/index.html
+++ b/index.html
@@ -18,5 +18,16 @@
 
       <p>Currently, I'm transitioning from e-commerce to tech.</p>
     </section>
+
+    <section id="contact">
+      <div class="contact-container">
+        <h2>Get in touch</h2>
+        <p>
+          I am always keen to delve into web development projects and
+          collaborations. If you have ideas or opportunities, let's chat!
+        </p>
+        <p><a href="mailto:zajac_tomasz@hotmail.com">Email me</a></p>
+      </div>
+    </section>
   </body>
 </html>
