added markup for the navigation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <nav id="navbar">
+      <ul>
+        <li class="name">
+          <h1><a href="#">Tomasz Zajac</a></h1>
+        </li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="./about.html">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li>
+          <a href="https://www.linkedin.com/in/tomaszzajac1/" target="_blank"
+            >LinkedIn</a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/TomaszSarmata" target="_blank">Github</a>
+        </li>
+        <li><a href="" target="_blank">CV</a></li>
+      </ul>
+    </nav>
+
     <section id="intro">
       <p class="name">Hi, my name is <span>Tomasz Zajac.</span></p>
       <h2>I develop beautiful web experiences.</h2>
