--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tomasz Zajac - Portfolio Website</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script
+      src="https://kit.fontawesome.com/6d6f0fb00a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <nav id="navbar">
+    <nav>
       <ul>
         <li class="name">
           <h1><a href="#">Tomasz Zajac</a></h1>
@@ -17,7 +21,7 @@
         <li><a href="#contact">Contact</a></li>
         <li>
           <a href="https://www.linkedin.com/in/tomaszzajac1/" target="_blank"
-            >LinkedIn</a
+            ><i class="fa-brands fa-linkedin"></i>LinkedIn</a
           >
         </li>
         <li>
