refactored the icon from font awsome to make it accessible for the screen readers and to hide the text from the UI

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <li><a href="#contact">Contact</a></li>
         <li>
           <a href="https://www.linkedin.com/in/tomaszzajac1/" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i>LinkedIn</a
+            ><span class="fa-brands fa-linkedin" aria-hidden="true"></span
+            ><span class="sr-only">LinkedIn</span></a
           >
         </li>
         <li>
