added extra icons to the markup and refactored them to make them accessible to screen readers

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <nav>
       <ul>
         <li class="name">
-          <h1><a href="#">Tomasz Zajac</a></h1>
+          <h1>
+            <a href="#"
+              ><i
+                class="fa-solid fa-code"
+                area-hidden="true"
+                style="padding-right: 10px"
+              ></i
+              >Tomasz Zajac
+            </a>
+          </h1>
         </li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="./about.html">About</a></li>
@@ -26,7 +35,10 @@
           >
         </li>
         <li>
-          <a href="https://github.com/TomaszSarmata" target="_blank">Github</a>
+          <a href="https://github.com/TomaszSarmata" target="_blank"
+            ><span class="fa-brands fa-square-github" area-hidden="true"></span
+            ><span class="sr-only">Github</span></a
+          >
         </li>
         <li><a href="" target="_blank">CV</a></li>
       </ul>
