create a call to action in the navbar to navigate a user to my CV

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             ><span class="sr-only">Github</span></a
           >
         </li>
-        <li><a href="" target="_blank">CV</a></li>
+        <li><a href="" target="_blank" class="button">View CV</a></li>
       </ul>
     </nav>
 
