added content of the footer

--- a/index.html
+++ b/index.html
@@ -66,5 +66,29 @@
         <p><a href="mailto:zajac_tomasz@hotmail.com">Email me</a></p>
       </div>
     </section>
+    <footer>
+      <h2>Tomasz Zajac · Web Developer</h2>
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/tomaszzajac1/" target="_blank"
+            ><span class="fa-brands fa-linkedin" aria-hidden="true"></span
+            ><span class="sr-only">LinkedIn</span></a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/TomaszSarmata" target="_blank"
+            ><span class="fa-brands fa-square-github" area-hidden="true"></span
+            ><span class="sr-only">Github</span></a
+          >
+        </li>
+        <li>
+          <a href="mailto:zajac_tomasz@hotmail.com"
+            ><span class="fa-solid fa-envelope" area-hidden="true"></span
+            ><span class="sr-only">Email</span></a
+          >
+        </li>
+      </ul>
+      <p><small>&copy 2023 Tomasz Zajac. All rights reserved.</small></p>
+    </footer>
   </body>
 </html>
