added some extra styling to the .button in contact section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
           I am always keen to delve into web development projects and
           collaborations. If you have ideas or opportunities, let's chat!
         </p>
-        <p><a href="mailto:zajac_tomasz@hotmail.com">Email me</a></p>
+        <p>
+          <a href="mailto:zajac_tomasz@hotmail.com" class="button">Email me</a>
+        </p>
       </div>
     </section>
     <footer>
