seperated sections with a gradient divs

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
       <p>Currently, I'm transitioning from e-commerce to tech.</p>
     </section>
 
+    <div class="gradient"></div>
+    <!-- projects -->
+    <div class="gradient"></div>
+
     <section id="contact">
       <div class="contact-container">
         <h2>Get in touch</h2>
@@ -68,6 +72,7 @@
         </p>
       </div>
     </section>
+    <div class="gradient"></div>
     <footer>
       <h2>Tomasz Zajac · Web Developer</h2>
       <ul>
