added some extra div for the bg color container

--- a/index.html
+++ b/index.html
@@ -57,36 +57,38 @@
     </section>
 
     <div class="gradient"></div>
-    <section id="projects">
-      <h2>Projects I'm proud of</h2>
-      <article>
-        <p4>Latest Project</p4>
-        <h3>Wall of Wander</h3>
-        <p>
-          Description of the project. This should be fairly concise while also
-          describing the key components that you developed or worked on. It can
-          be as long as you need it to be but should at least be a few sentences
-          long. Be sure to include specific links anywhere in the description. A
-          link looks like <a href="">this</a>, and multiple links look like
-          <a href="">this</a> and like <a href="">this</a> .
-        </p>
-        <h4>Technologies used include:</h4>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>SVG</li>
-        </ul>
+    <div class="section-dkblue">
+      <section id="projects">
+        <h2>Projects I'm proud of</h2>
+        <article>
+          <p4>Latest Project</p4>
+          <h3>Wall of Wander</h3>
+          <p class="black-box">
+            Description of the project. This should be fairly concise while also
+            describing the key components that you developed or worked on. It
+            can be as long as you need it to be but should at least be a few
+            sentences long. Be sure to include specific links anywhere in the
+            description. A link looks like <a href="">this</a>, and multiple
+            links look like <a href="">this</a> and like <a href="">this</a> .
+          </p>
+          <h4>Technologies used include:</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>SVG</li>
+          </ul>
 
-        <img
-          src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
-          alt=""
-        />
-      </article>
-    </section>
+          <img
+            src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
+            alt=""
+          />
+        </article>
+      </section>
+    </div>
+
     <div class="gradient"></div>
-
-    <section id="contact">
-      <div class="contact-container">
+    <div class="section-plum">
+      <section id="contact">
         <h2>Get in touch</h2>
         <p>
           I am always keen to delve into web development projects and
@@ -95,8 +97,8 @@
         <p>
           <a href="mailto:zajac_tomasz@hotmail.com" class="button">Email me</a>
         </p>
-      </div>
-    </section>
+      </section>
+    </div>
     <div class="gradient"></div>
     <footer>
       <h2>Tomasz Zajac · Web Developer</h2>
