--- a/index.html
+++ b/index.html
@@ -61,22 +61,25 @@
       <section id="projects">
         <h2>Projects I'm proud of</h2>
         <article>
-          <p4>Latest Project</p4>
-          <h3>Wall of Wander</h3>
-          <p class="black-box">
-            Description of the project. This should be fairly concise while also
-            describing the key components that you developed or worked on. It
-            can be as long as you need it to be but should at least be a few
-            sentences long. Be sure to include specific links anywhere in the
-            description. A link looks like <a href="">this</a>, and multiple
-            links look like <a href="">this</a> and like <a href="">this</a> .
-          </p>
-          <h4>Technologies used include:</h4>
-          <ul>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>SVG</li>
-          </ul>
+          <div class="text-container">
+            <p4>Latest Project</p4>
+            <h3>Wall of Wander</h3>
+            <p class="black-box">
+              Description of the project. This should be fairly concise while
+              also describing the key components that you developed or worked
+              on. It can be as long as you need it to be but should at least be
+              a few sentences long. Be sure to include specific links anywhere
+              in the description. A link looks like <a href="">this</a>, and
+              multiple links look like <a href="">this</a> and like
+              <a href="">this</a> .
+            </p>
+            <h4>Technologies used include:</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>SVG</li>
+            </ul>
+          </div>
 
           <img
             src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
