--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </article>
         <article>
           <div class="text-container reversed">
-            <p4>Latest Project</p4>
+            <p4>Bootcamp Project</p4>
             <h3>Wall of Wander</h3>
             <p class="black-box">
               Description of the project. This should be fairly concise while
@@ -115,7 +115,7 @@
         </article>
         <article>
           <div class="text-container">
-            <p4>Latest Project</p4>
+            <p4>UI/UX Project</p4>
             <h3>Wall of Wander</h3>
             <p class="black-box">
               Description of the project. This should be fairly concise while
