changed the image

--- a/about.html
+++ b/about.html
@@ -68,10 +68,7 @@
             </ul>
           </div>
 
-          <img
-            src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
-            alt=""
-          />
+          <img src="img/use.jpg" alt="" />
         </article>
       </section>
     </div>
