--- a/about.html
+++ b/about.html
@@ -25,9 +25,9 @@
             </a>
           </h1>
         </li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="./about.html">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="index.html#projects">Projects</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="./index.html#contact">Contact</a></li>
         <li>
           <a href="https://www.linkedin.com/in/tomaszzajac1/" target="_blank"
             ><span class="fa-brands fa-linkedin" aria-hidden="true"></span
