changed the description of the projct

--- a/index.html
+++ b/index.html
@@ -116,28 +116,34 @@
         <article>
           <div class="text-container">
             <p4>UI/UX Project</p4>
-            <h3>Wall of Wander</h3>
+            <h3>Tailwind CSS Nike</h3>
             <p class="black-box">
-              Description of the project. This should be fairly concise while
-              also describing the key components that you developed or worked
-              on. It can be as long as you need it to be but should at least be
-              a few sentences long. Be sure to include specific links anywhere
-              in the description. A link looks like <a href="">this</a>, and
-              multiple links look like <a href="">this</a> and like
-              <a href="">this</a> .
+              In
+              <a href="https://nike-sepia-delta.vercel.app/" target="_blank"
+                >this project</a
+              >
+              , I tackled the redesign of a Nike website using Tailwind CSS,
+              emphasizing responsive design and contemporary UI. My work spanned
+              the full development cycle, from initial setup to deployment, as
+              detailed in the
+              <a href="https://github.com/TomaszSarmata/Nike" target="_blank"
+                >GitHub repository</a
+              >
+              . Creating components such as NavBars and Hero Sections allowed me
+              to deepen my expertise in Tailwind CSS. This project underscores
+              my proficiency in applying advanced CSS frameworks to create
+              visually compelling and functional web designs.
             </p>
             <h4>Technologies used include:</h4>
             <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>SVG</li>
+              <li>Tailwind CSS</li>
+              <li>React</li>
+              <li>Vite</li>
+              <li>Git</li>
             </ul>
           </div>
 
-          <img
-            src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
-            alt=""
-          />
+          <img src="./img/nike-project.png" alt="" />
         </article>
       </section>
     </div>
