--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             class="reversed"
           />
         </article>
+
         <article>
           <div class="text-container">
             <p4>UI/UX Project</p4>
@@ -122,10 +123,10 @@
               <a href="https://nike-sepia-delta.vercel.app/" target="_blank"
                 >this project</a
               >
-              , I tackled the redesign of a Nike website using Tailwind CSS,
-              emphasizing responsive design and contemporary UI. My work spanned
-              the full development cycle, from initial setup to deployment, as
-              detailed in the
+              , I tackled the redesign of a Nike landing page using Tailwind
+              CSS, emphasizing responsive design and contemporary UI. My work
+              spanned the full development cycle, from initial setup to
+              deployment, as detailed in the
               <a href="https://github.com/TomaszSarmata/Nike" target="_blank"
                 >GitHub repository</a
               >
