--- a/index.html
+++ b/index.html
@@ -63,28 +63,35 @@
         <article>
           <div class="text-container">
             <p4>Latest Project</p4>
-            <h3>Wall of Wander</h3>
+            <h3>Omnifood</h3>
             <p class="black-box">
-              Description of the project. This should be fairly concise while
-              also describing the key components that you developed or worked
-              on. It can be as long as you need it to be but should at least be
-              a few sentences long. Be sure to include specific links anywhere
-              in the description. A link looks like <a href="">this</a>, and
-              multiple links look like <a href="">this</a> and like
-              <a href="">this</a> .
+              In
+              <a href="https://omnifood-tomasz.netlify.app/" target="_blank"
+                >this comprehensive project</a
+              >, I mastered the essentials of HTML and CSS by building a fully
+              responsive and professionally looking website from scratch. My
+              journey encompassed a deep dive into modern web development
+              techniques, including flexbox, CSS grid, and responsive design
+              principles, allowing me to implement the project that adapts
+              seamlessly across devices. This experience has significantly
+              bolstered my ability to craft aesthetically pleasing and
+              functionally robust websites, as documented in my
+              <a
+                href="https://github.com/TomaszSarmata/omniFood"
+                target="_blank"
+                >GitHub repository</a
+              >
             </p>
             <h4>Technologies used include:</h4>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
-              <li>SVG</li>
+              <li>JavaScript</li>
+              <li>Git</li>
             </ul>
           </div>
 
-          <img
-            src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
-            alt=""
-          />
+          <img src="img/ominfood-project.png" alt="" />
         </article>
         <article>
           <div class="text-container reversed">
