linked up the script.js file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       src="https://kit.fontawesome.com/6d6f0fb00a.js"
       crossorigin="anonymous"
     ></script>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <nav>
@@ -192,7 +193,12 @@
           >
         </li>
       </ul>
-      <p><small>&copy 2023 Tomasz Zajac. All rights reserved.</small></p>
+      <p>
+        <small
+          >&copy <span class="footer-date">2023</span> Tomasz Zajac. All rights
+          reserved.</small
+        >
+      </p>
     </footer>
   </body>
 </html>
