changed the wording

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
               In
               <a href="https://omnifood-tomasz.netlify.app/" target="_blank"
                 >this comprehensive project</a
-              >, I mastered the essentials of HTML and CSS by building a fully
-              responsive and professionally looking website from scratch. My
-              journey encompassed a deep dive into modern web development
+              >, I mastered the essentials of HTML and CSS by implementing a
+              fully responsive and professionally looking website from scratch.
+              My journey encompassed a deep dive into modern web development
               techniques, including flexbox, CSS grid, and responsive design
               principles, allowing me to implement the project that adapts
               seamlessly across devices. This experience has significantly
