uploaded the project photo and changed the name of the project

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <p class="black-box">
               In
               <a href="https://omnifood-tomasz.netlify.app/" target="_blank"
-                >this comprehensive project</a
+                >this project</a
               >, I mastered the essentials of HTML and CSS by implementing a
               fully responsive and professionally looking website from scratch.
               My journey encompassed a deep dive into modern web development
@@ -81,7 +81,7 @@
                 href="https://github.com/TomaszSarmata/omniFood"
                 target="_blank"
                 >GitHub repository</a
-              >
+              >.
             </p>
             <h4>Technologies used include:</h4>
             <ul>
@@ -97,7 +97,7 @@
         <article>
           <div class="text-container reversed">
             <p4>Bootcamp Project</p4>
-            <h3>Wall of Wander</h3>
+            <h3>Full Stack React</h3>
             <p class="black-box">
               Description of the project. This should be fairly concise while
               also describing the key components that you developed or worked
@@ -109,17 +109,14 @@
             </p>
             <h4>Technologies used include:</h4>
             <ul class="reversed">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>SVG</li>
+              <li>Next.js</li>
+              <li>Supabase</li>
+              <li>TailwindCSS</li>
+              <li>PostgresSQL</li>
             </ul>
           </div>
 
-          <img
-            src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png"
-            alt=""
-            class="reversed"
-          />
+          <img src="/img/full-stack.png" alt="" class="reversed" />
         </article>
 
         <article>
