--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </ul>
           </div>
 
-          <img src="/img/full-stack.png" alt="" class="reversed" />
+          <img src="img/full-stack.png" alt="" class="reversed" />
         </article>
 
         <article>
