added links to the bootcamp project

--- a/index.html
+++ b/index.html
@@ -103,9 +103,18 @@
               also describing the key components that you developed or worked
               on. It can be as long as you need it to be but should at least be
               a few sentences long. Be sure to include specific links anywhere
-              in the description. A link looks like <a href="">this</a>, and
-              multiple links look like <a href="">this</a> and like
-              <a href="">this</a> .
+              in the description. A link looks like
+              <a
+                target="_blank"
+                href="https://github.com/TomaszSarmata/full-stack-app"
+                >GitHub repository!!!</a
+              >, and multiple links look like <a href="">this</a> and like
+              <a
+                target="_blank"
+                href="https://tomasz-full-stack-app.vercel.app/"
+                >this project!!!</a
+              >
+              .
             </p>
             <h4>Technologies used include:</h4>
             <ul class="reversed">
