added some description to the full stack project

--- a/index.html
+++ b/index.html
@@ -64,7 +64,11 @@
         <article>
           <div class="text-container">
             <p4>Latest Project</p4>
-            <h3>Omnifood</h3>
+            <h3>
+              <a href="https://omnifood-tomasz.netlify.app/" target="_blank"
+                >Omnifood</a
+              >
+            </h3>
             <p class="black-box">
               In
               <a href="https://omnifood-tomasz.netlify.app/" target="_blank"
@@ -97,24 +101,32 @@
         <article>
           <div class="text-container reversed">
             <p4>Bootcamp Project</p4>
-            <h3>Full Stack React</h3>
-            <p class="black-box">
-              Description of the project. This should be fairly concise while
-              also describing the key components that you developed or worked
-              on. It can be as long as you need it to be but should at least be
-              a few sentences long. Be sure to include specific links anywhere
-              in the description. A link looks like
-              <a
-                target="_blank"
-                href="https://github.com/TomaszSarmata/full-stack-app"
-                >GitHub repository!!!</a
-              >, and multiple links look like <a href="">this</a> and like
+            <h3>
               <a
                 target="_blank"
                 href="https://tomasz-full-stack-app.vercel.app/"
-                >this project!!!</a
+                >Full Stack React</a
               >
-              .
+            </h3>
+            <p class="black-box">
+              While building
+              <a
+                target="_blank"
+                href="https://tomasz-full-stack-app.vercel.app/"
+                >this full stack application</a
+              >
+              , I have immersed myself in fundamental concepts of React and
+              Next.js. The most important lessens I took while implementing this
+              website included the effective application of useState and
+              useEffect hooks, component architecture and the creation of simple
+              API endpoints able to persist and feed data to bit.io and
+              supabase. My work here spanned across various front-end and
+              back-end technologies such as Tailwind CSS, React, Next.js, Git,
+              <a
+                target="_blank"
+                href="https://github.com/TomaszSarmata/full-stack-app"
+                >GitHub</a
+              >, Vercel, bit.io along with the supabase and SQL.
             </p>
             <h4>Technologies used include:</h4>
             <ul class="reversed">
@@ -131,7 +143,11 @@
         <article>
           <div class="text-container">
             <p4>UI/UX Project</p4>
-            <h3>Tailwind CSS Nike</h3>
+            <h3>
+              <a href="https://nike-sepia-delta.vercel.app/" target="_blank"
+                >Tailwind CSS Nike</a
+              >
+            </h3>
             <p class="black-box">
               In
               <a href="https://nike-sepia-delta.vercel.app/" target="_blank"
