changed the markup and the image on the about page

--- a/about.html
+++ b/about.html
@@ -60,15 +60,21 @@
               multiple links look like <a href="">this</a> and like
               <a href="">this</a> .
             </p>
-            <h4>Technologies used include:</h4>
-            <ul>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>SVG</li>
+            <h4 class="pb-medium">
+              Feel free to get in touch. I am always happy to talk.
+            </h4>
+            <ul class="profile-links">
+              <li><a class="button" href="tel:07528751353">Call me</a></li>
+              <li>
+                <a class="button" href="mailto:zajac_tomasz@hotmail.com"
+                  >Email me</a
+                >
+              </li>
+              <li><a class="button" href="">View CV</a></li>
             </ul>
           </div>
 
-          <img src="img/use.jpg" alt="" />
+          <img src="img/profile-web.png" alt="" />
         </article>
       </section>
     </div>
