Added text to the about me page

--- a/about.html
+++ b/about.html
@@ -47,21 +47,29 @@
 
     <div class="section-dkblue">
       <section id="projects">
-        <h2>About Tomasz Zajac</h2>
+        <h2>More about me</h2>
+
         <article>
           <div class="text-container">
-            <h3>Just the highlights</h3>
+            <h3>Hello I'm Tomasz</h3>
             <p class="black-box">
-              Description of the project. This should be fairly concise while
-              also describing the key components that you developed or worked
-              on. It can be as long as you need it to be but should at least be
-              a few sentences long. Be sure to include specific links anywhere
-              in the description. A link looks like <a href="">this</a>, and
-              multiple links look like <a href="">this</a> and like
-              <a href="">this</a> .
+              A devoted father of two and an aspiring web developer passionate
+              about crafting engaging user experiences. My journey into web
+              development was sparked by curiosity and a drive to enhance my
+              online shop, leading me down a path of self-directed learning on
+              platforms like Codecademy, Front End Masters and Udemy. This
+              journey was further enriched by participating in
+              government-sponsored coding bootcamps. Juggling family, work and
+              studies has bee a formidable challenge, yet it has offered me the
+              time to thoroughly grasp the fundaments of web programming.<br />
+              Away from the keyboard, I can be found at my local gym or enjoying
+              quality time with family and friends. I really enjoy exploring new
+              places and meeting new people.
             </p>
             <h4 class="pb-medium">
-              Feel free to get in touch. I am always happy to talk.
+              If my story resonates with you, I would be delighted to discuss
+              how I can contribute to your projects and support the growth of
+              your organisation.
             </h4>
             <ul class="profile-links">
               <li><a class="button" href="tel:07528751353">Call me</a></li>
@@ -70,7 +78,7 @@
                   >Email me</a
                 >
               </li>
-              <li><a class="button" href="">View CV</a></li>
+              <li><a class="button" href="">View my CV</a></li>
             </ul>
           </div>
 
