--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
               platforms like Codecademy, Front End Masters and Udemy. This
               journey was further enriched by participating in
               government-sponsored coding bootcamps. Juggling family, work and
-              studies has bee a formidable challenge, yet it has offered me the
+              studies has been a formidable challenge, yet it has offered me the
               time to thoroughly grasp the fundaments of web programming.<br />
               Away from the keyboard, I can be found at my local gym or enjoying
               quality time with family and friends. I really enjoy exploring new
