changed the class name and added some styling

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
               quality time with family and friends. I really enjoy exploring new
               places and meeting new people.
             </p>
-            <h4 class="pb-medium">
+            <h4 class="cta-text">
               If my story resonates with you, I would be delighted to discuss
               how I can contribute to your projects and support the growth of
               your organisation.
