--- a/about.html
+++ b/about.html
@@ -50,8 +50,9 @@
         <h2>More about me</h2>
 
         <article>
+          <img src="img/profile-web.png" alt="" />
           <div class="text-container">
-            <h3>Hello I'm Tomasz</h3>
+            <h3>Hello, I'm Tomasz</h3>
             <p class="black-box">
               A devoted father of two and an aspiring web developer passionate
               about crafting engaging user experiences. My journey into web
@@ -81,8 +82,6 @@
               <li><a class="button" href="">View my CV</a></li>
             </ul>
           </div>
-
-          <img src="img/profile-web.png" alt="" />
         </article>
       </section>
     </div>
