changed the wording

--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
               places and meeting new people.
             </p>
             <h4 class="cta-text">
-              If my story resonates with you, I would be delighted to discuss
+              If my profile sparks an interest, I would be delighted to discuss
               how I can contribute to your projects and support the growth of
               your organisation.
             </h4>
