--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               techniques, including flexbox, CSS grid, and responsive design
               principles, allowing me to implement the project that adapts
               seamlessly across devices. This experience has significantly
-              bolstered my ability to craft aesthetically pleasing and
+              bolstered my ability to implement aesthetically pleasing and
               functionally robust websites, as documented in my
               <a
                 href="https://github.com/TomaszSarmata/omniFood"
@@ -153,16 +153,16 @@
               <a href="https://nike-sepia-delta.vercel.app/" target="_blank"
                 >this project</a
               >
-              , I tackled the redesign of a Nike landing page using Tailwind
-              CSS, emphasizing responsive design and contemporary UI. My work
-              spanned the full development cycle, from initial setup to
+              , I tackled the implementation of a Nike landing page using
+              Tailwind CSS, emphasizing responsive design and contemporary UI.
+              My work spanned the full development cycle, from initial setup to
               deployment, as detailed in the
               <a href="https://github.com/TomaszSarmata/Nike" target="_blank"
                 >GitHub repository</a
               >
               . Creating components such as NavBars and Hero Sections allowed me
               to deepen my expertise in Tailwind CSS. This project underscores
-              my proficiency in applying advanced CSS frameworks to create
+              my proficiency in applying advanced CSS frameworks to implement
               visually compelling and functional web designs.
             </p>
             <h4>Technologies used include:</h4>
