added a path to the href in about me navbar

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
       <ul>
         <li class="name">
           <h1>
-            <a href="#"
+            <a href="index.html"
               ><i
                 class="fa-solid fa-code"
                 area-hidden="true"
