linked up my CV on dropbox

--- a/index.html
+++ b/index.html
@@ -41,7 +41,14 @@
             ><span class="sr-only">Github</span></a
           >
         </li>
-        <li><a href="" target="_blank" class="button">View CV</a></li>
+        <li>
+          <a
+            href="https://www.dropbox.com/scl/fi/rlykxo2n0317yivadogy0/CV-Tomasz-Zajac-2024-Latest-pdf.pdf?rlkey=lc4y8fmams39wefl4l0srcnev&dl=0"
+            target="_blank"
+            class="button"
+            >View CV</a
+          >
+        </li>
       </ul>
     </nav>
 
