--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 >this full stack application</a
               >
               , I have immersed myself in fundamental concepts of React and
-              Next.js. The most important lessens I took while implementing this
+              Next.js. The most important lessons I took while implementing this
               website included the effective application of useState and
               useEffect hooks, component architecture and the creation of simple
               API endpoints able to persist and feed data to bit.io and
@@ -140,7 +140,7 @@
               <li>Next.js</li>
               <li>Supabase</li>
               <li>TailwindCSS</li>
-              <li>PostgresSQL</li>
+              <li>PostgreSQL</li>
             </ul>
           </div>
 
