Update index.html with dropbox link to cv

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
         <li>
           <a
-            href="https://www.dropbox.com/scl/fi/arbfymtonqte586ubmb8j/CV-Tomasz-Zajac-2024-Latest-pdf.pdf?rlkey=ajggq5qxrky1jcicocya646tc&dl=0"
+            href="https://www.dropbox.com/scl/fi/ik14h46mvpytb9e969bg2/Tomasz-Zajac-CV-border.docx?rlkey=y78bdh6d0od1sxy431dvnr3ln&st=i3p7kq8c&dl=0"
             target="_blank"
             class="button"
             >View CV</a
