amend the cv link

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
         </li>
         <li>
           <a
-            href="https://www.dropbox.com/scl/fi/arbfymtonqte586ubmb8j/CV-Tomasz-Zajac-2024-Latest-pdf.pdf?rlkey=ajggq5qxrky1jcicocya646tc&dl=0"
+            href="https://www.dropbox.com/scl/fi/kvfdsgoyvwhzzsscn27ju/CV-Tomasz-Zajac-plain-pdf.pdf?rlkey=qs2rh1b75db6h0m3xue3v2k31&st=iagedcb4&dl=0"
             target="_blank"
             class="button"
             >View CV</a
