add link to a button

--- a/about.html
+++ b/about.html
@@ -86,7 +86,13 @@
                   >Email me</a
                 >
               </li>
-              <li><a class="button" href="">View my CV</a></li>
+              <li>
+                <a
+                  class="button"
+                  href="https://www.dropbox.com/scl/fi/kvfdsgoyvwhzzsscn27ju/CV-Tomasz-Zajac-plain-pdf.pdf?rlkey=qs2rh1b75db6h0m3xue3v2k31&st=iagedcb4&dl=0"
+                  >View my CV</a
+                >
+              </li>
             </ul>
           </div>
         </article>
